# eozin

./: Cargo.toml  README.md
examples/: read_files.rs
python/: Cargo.toml  README.md  setup.cfg  setup.py
python/examples/: simple_example.py
python/src/: lib.rs
src/: aperio.rs  lib.rs  reader.rs  std.rs  tiff.rs  vendor.rs  wasm.rs
src/sync/: reader.rs
src/tiff/: data.rs  decoder.rs  error.rs  jpeg_in_tiff.rs  parser.rs  property.rs  tag.rs  tifflike.rs  types.rs
src/tiff/tifflike/: aperio.rs  leica.rs
wasm/: .gitignore  Cargo.toml  example.html
wasm/src/: lib.rs
