[package]
name = "eozin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "wasm-bindgen-futures", "serde"]
native = []

[dependencies]
roxmltree = "0.17.0"
regex = "1.7.0"
wasm-bindgen = { version = "0.2.84", optional = true, features=["serde-serialize"]}
web-sys = { version="0.3.61", features=["Blob", "BlobPropertyBag", "console", "ImageData", "File"], optional = true}
js-sys = { version = "0.3.58", optional=true}
wasm-bindgen-futures = { version = "0.4.31", optional=true}
serde = { version = "1.0", features = ["derive"], optional=true }
