[package]
name = "eozin-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eozin = { path = "../../eozin", features = ["wasm"]}
wasm-bindgen = "0.2.84"
web-sys = { version="0.3.61", features= ["Blob"] }

wasm-bindgen-futures = { version = "0.4.31"}
